Bug 491457 - Add spacing after each fields

--- a/stylesheets/_drupal/components/fields.less
+++ b/stylesheets/_drupal/components/fields.less
@@ -52,3 +52,13 @@ form>div>div.form-item {
     display:block;
   }
 }
+
+// Nodes
+.page-node{
+  .field{
+    margin-bottom:10px;
+    .field-label{
+      font-size:17px;
+    }
+  }
+}
