--- a/stylesheets/marketplace/drupal.less
+++ b/stylesheets/marketplace/drupal.less
@@ -193,14 +193,16 @@
 
   .field-name-taxonomy-vocabulary-1{
     margin-top:25px;
-    padding-bottom:10px;
   }
-  
+
   .group-additional-details .field{
     margin-bottom:3px;
   }
   .field{
     color:@gray;
+    .field-label{
+      font-size:14px;
+    }
   }
 }
 .node-form{
@@ -229,7 +231,7 @@
   .listing-badge-container,
   h2.listing-title{
     margin-top:30px;
-    
+
   }
   .marketplace-badges-container{
     margin-top:-1px;
@@ -348,17 +350,7 @@ h2.listing-title{
   margin-left:5px;
 }
 
-// Nodes
-.node-error-report,
-.node-mpc-ads,
-.node-mpc-stats,
-.node-mpc-catalog{
-  .field{
-    margin-bottom:15px;
-  }
-}
-
-#admin-menu .dropdown .admin-menu-toolbar-category > a, 
+#admin-menu .dropdown .admin-menu-toolbar-category > a,
 #admin-menu {
   .dropdown{
     .admin-mpc-stats{
